Asciidoctor attributes can be configured via properties (#133)